# nexaas

./: .env.example  .gitignore  .triggerignore  BUSINESS_PLAN.md  CHANGELOG.md  CLAUDE.md  CLAUDE.ops.md  LICENSE  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  workspace.yaml
.changeset/: README.md  config.json  initial-postmark-extraction.md  initial-resend-extraction.md  initial-sendgrid-extraction.md
capabilities/: _registry.yaml  model-registry.yaml
client-dashboard/: middleware.ts  package-lock.json  package.json
dashboard/: .env.local.example  middleware.ts  next.config.ts  ovh.d.ts  package-lock.json  package.json
database/: schema.sql
docs/: README.md  STATUS.md  architecture-guide-v4-gap-analysis.md  architecture-v4-implementation-plan.md  architecture.md  contracts.md  deployment-ops.md  deployment-patterns.md  fleet-protocol.md  glossary.md  migration-guide.md  nexmatic.md  next-steps.md  releases.md  security-surface.md  skill-authoring.md  spend-governance.md  token-optimization.md  trigger-dev-reference.md  (+2 more)
gateway/: config.py  gateway.service  pyproject.toml  seed-demo.py  server.py
gateway/.claude/commands/: add-agent.md  add-page.md  deploy-gateway.md  validate-workspace.md  workspace-status.md
gateway/api/: chat.py  events.py  ops.py  queue.py  usage.py  workspace.py
gateway/db/: migrate.py  schema.sql  usage.py
gateway/engine/: event_engine.py  job_queue.py  ops_monitor.py  workers.py
gateway/readers/: agent_reader.py  workspace_reader.py
(+590 files in other folders)
