[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-mission-control-gateway"
version = "0.1.0"
description = "AI Mission Control Gateway - event-driven agent orchestration framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
